# Humanoid-Control

./: .gitignore  README.md
humanoid-control/humanoid-legged-description/: CMakeLists.txt
humanoid-control/humanoid-legged-description/launch/: gazebo.launch.py
humanoid-control/humanoid_common/include/humanoid_common/: output_color.h
humanoid-control/humanoid_controllers/include/humanoid_controllers/: humanoidController.h
humanoid-control/humanoid_controllers/launch/: load_cheat_controller.launch.py  load_joy_controller.launch.py  load_normal_controller.launch.py
humanoid-control/humanoid_controllers/src/: NormalControllerNode.cpp  TargetTrajectoriesPublisher.cpp
humanoid-control/humanoid_dummy/: CMakeLists.txt  package.xml
humanoid-control/humanoid_dummy/launch/: multiplot.launch.py
humanoid-control/humanoid_dummy/src/gait/: GaitKeyboardPublisher.cpp
humanoid-control/humanoid_dummy/src/visualization/: HumanoidVisualizer.cpp
humanoid-control/humanoid_estimation/: package.xml
humanoid-control/humanoid_estimation/include/humanoid_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
humanoid-control/humanoid_estimation/src/: LinearKalmanFilter.cpp
humanoid-control/humanoid_interface/: package.xml
humanoid-control/humanoid_wbc/: package.xml
humanoid-control/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
humanoid-control/install/qpoases_colcon/include/: qpOASES.hpp
humanoid-control/install/qpoases_colcon/lib/: libqpOASES.so.3.2
humanoid-control/log/: latest_build
humanoid-control/mujoco_sim/: package.xml
humanoid-control/mujoco_sim/script/: mujoco_base.py
humanoid-control/qpoases_colcon/: CMakeLists.txt  package.xml
humanoid-legged-description/: CMakeLists.txt  package.xml
humanoid-legged-description/config/: joint_names_humanoid_legged.yaml  urdf.rviz
humanoid-legged-description/launch/: display.launch.py
humanoid-legged-description/meshes/: leg_l4_link.STL
humanoid-legged-description/meshes_old_backup/: leg_r4_link.STL
humanoid-legged-description/mjcf/: humanoid_legged.xml
humanoid-legged-description/rviz/: urdf.rviz
humanoid-legged-description/urdf/: humanoid_legged_control.urdf  humanoid_legged_origin.urdf
humanoid_common/: CMakeLists.txt  package.xml
humanoid_common/include/humanoid_common/hardware_interface/: ContactSensorInterface.h  HybridJointInterface.h
humanoid_controllers/: CMakeLists.txt  humanoid_controllers_plugins.xml  package.xml
humanoid_controllers/config/: controllers.yaml
humanoid_controllers/include/humanoid_controllers/: SafetyChecker.h  TargetTrajectoriesPublisher.h  humanoidController.h
humanoid_controllers/include/humanoid_controllers/visualization/: humanoidSelfCollisionVisualization.h
humanoid_controllers/launch/: load_cheat_controller.launch.py  load_cheat_controller_gdb.launch.py  load_gait_command.launch.py  load_joy_controller.launch.py  load_normal_controller.launch.py
humanoid_controllers/src/: CheatControllerNode.cpp  JoyControllerNode.cpp  NormalControllerNode.cpp  TargetTrajectoriesPublisher.cpp  humanoidController.cpp
humanoid_dummy/: CMakeLists.txt  package.xml
humanoid_dummy/include/humanoid_dummy/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
humanoid_dummy/include/humanoid_dummy/visualization/: HumanoidVisualizer.h
humanoid_dummy/launch/: legged_robot_sqp.launch.py  legged_robot_walk_test.launch.py
humanoid_dummy/rviz/: humanoid.rviz
humanoid_dummy/scripts/: send_goal_pose.py
humanoid_dummy/src/: HumanoidDdpMpcNode.cpp  HumanoidDummyNode.cpp  HumanoidGaitCommandNode.cpp  HumanoidIpmMpcNode.cpp  HumanoidPoseCommandNode.cpp  HumanoidSqpMpcNode.cpp
humanoid_dummy/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
humanoid_dummy/src/visualization/: HumanoidVisualizer.cpp
humanoid_estimation/: CMakeLists.txt  package.xml
humanoid_estimation/include/humanoid_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
humanoid_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
humanoid_interface/: CMakeLists.txt  package.xml
humanoid_interface/config/command/: gait.info  reference.info
humanoid_interface/config/mpc/: task.info
humanoid_interface/include/humanoid_interface/: HumanoidInterface.h
humanoid_interface/include/humanoid_interface/common/: ModelSettings.h
humanoid_interface/include/humanoid_interface/constraint/: FootSafetyConstraint.h
humanoid_interface/include/humanoid_interface/gait/: MotionPhaseDefinition.h
humanoid_interface/src/: HumanoidInterface.cpp
humanoid_interface/src/constraint/: FootRollContraint.cpp  FootSafetyConstraint.cpp
humanoid_interface/src/reference_manager/: SwitchedModelReferenceManager.cpp
humanoid_wbc/: CMakeLists.txt  package.xml
humanoid_wbc/include/humanoid_wbc/: WbcBase.h  WeightedWbc.h
humanoid_wbc/src/: WbcBase.cpp  WeightedWbc.cpp
install/: local_setup.sh
install/humanoid_common/share/humanoid_common/: local_setup.bash  local_setup.zsh  package.bash  package.ps1  package.xml  package.zsh
install/humanoid_interface/include/humanoid_interface/: HumanoidPreComputation.h
install/humanoid_interface/share/humanoid_interface/: local_setup.dsv  local_setup.zsh  package.dsv  package.ps1  package.xml
install/humanoid_wbc/share/humanoid_wbc/: local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.zsh
install/qpoases_colcon/include/qpOASES/: Bounds.hpp  ConstraintProduct.hpp  Constraints.hpp  Flipper.hpp  LapackBlasReplacement.hpp  MessageHandling.ipp  Options.hpp  SQProblem.hpp  SQProblemSchur.ipp  SubjectTo.hpp  SubjectTo.ipp  Types.hpp  UnitTesting.hpp  Utils.hpp
install/qpoases_colcon/share/qpoases_colcon/: local_setup.bash  local_setup.dsv  (+6 more)
mujoco_sim/: CMakeLists.txt  package.xml
mujoco_sim/script/: draw_torque.py  humanoid_sim.py  joy.py  mujoco_base.py  teleop.py
qpoases/: CMakeLists.txt  package.xml
realtime_tools/: CMakeLists.txt
source_ros1/humanoid-legged-description/meshes/: base_link.STL
source_ros1/humanoid_controllers/launch/: load_normal_controller.launch
(+115 files in other folders)
