<package format="3">
  <name>humanoid_legged_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for humanoid_legged_description</p>
    <p>This package contains configuration data, 3D models and launch files
for humanoid_legged_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>