<?xml version="1.0"?>
<package format="3">
    <name>humanoid_common</name>
    <version>0.0.0</version>
    <description>The humanoid_common package</description>

    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
