<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>humanoid_controllers</name>
    <version>0.0.0</version>
    <description>The humanoid_controllers packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>ocs2_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>robot_state_publisher</depend>
    <depend>urdf</depend>
    <depend>humanoid_common</depend>
    <depend>humanoid_interface</depend>
    <depend>humanoid_estimation</depend>
    <depend>humanoid_wbc</depend>
    <depend>humanoid_dummy</depend>
    <depend>ocs2_self_collision_visualization</depend>
    <depend>angles</depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
