<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>humanoid_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>humanoid_interface</depend>
    <depend>qpoases_catkin</depend>
    <depend>pinocchio</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
